# D-centralisation-Ai-Ml-blockchain

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
miner_sdk/: .gitignore  LICENSE  README.md  pyproject.toml
miner_sdk/miner_sdk/: __init__.py  client.py
miner_sdk/tests/: test_client.py
notary_server/: Cargo.toml  Dockerfile
notary_server/migrations/: 20251111233648_initial_schema.down.sql  20251111233648_initial_schema.up.sql
notary_server/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs
notary_server/tests/: handlers.rs
