[package]
name = "notary_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.1", features = ["multipart"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["full"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
axum-test = "18.2.1"
